# trueskill

./: .gitignore  Makefile  conftest.py  pyproject.toml  setup.py  trueskillhelpers.py
.github/workflows/: ci.yml
docs/: conf.py
src/trueskill/: __init__.py  backends.py  constants.py  deprecated.py  factorgraph.py  globals.py  mathematics.py  trueskill.py
src/trueskill/backends/: __init__.py  builtin.py  selector.py
tests/: helpers.py  test_trueskill.py  trueskilltest.py
